force-app/main/default/objects/Account_Idea_Assignment__c/Account_Idea_Assignment__c.object-meta.xml
<CustomObject>
    <description>added for GTMS-14252</description>
    <label>Related Account</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Related Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>