force-app/main/default/objects/Account_Idea_Assignment__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>added for GTMS-24019</description>
    <formula>Account__r.Record_Type__c</formula>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>