force-app/main/default/objects/Account_Idea_Assignment__c/fields/Escalated_By__c.field-meta.xml
<CustomField>
    <fullName>Escalated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>added for GTMS-25822</description>
    <label>Escalated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>