force-app/main/default/objects/Account_Idea_Assignment__c/fields/Ultimate_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_ID__c</fullName>
    <description>added for GTMS-24019</description>
    <formula>Account__r.Ultimate_Parent_Id__c</formula>
    <label>Ultimate Parent ID</label>
    <type>Text</type>
</CustomField>